[project]
name = "raccoontools-db"
version = "1.0.1"
description = "A collection of utilities to be used with databases."
readme = "README.md"
license = { file = "LICENSE.txt" }
authors = [
    { name = "Breno RdV", email = "hello@raccoon.ninja" },
]
maintainers = [
    { name = "Breno RdV", email = "hello@raccoon.ninja" },
]
keywords = ["database", "db", "utilities", "tools", "helpers", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "psycopg[binary,pool]~=3.3.4",
    "simple-log-factory==1.0.0",

    # Adding this dependency explicitly to solve security issues while requests doesn't catch up. Refs:
    # https://github.com/brenordv/pypi-raccoon-tools/security/dependabot/5
    # https://github.com/brenordv/pypi-raccoon-tools/security/dependabot/6
    "idna==3.18"
]
requires-python = ">=3.11"

[project.optional-dependencies]
otel = ["simple-log-factory-ext-otel[psycopg]==1.5.0"]
fastapi = ["simple-log-factory-ext-otel[fastapi]==1.5.0"]
all = ["simple-log-factory-ext-otel[fastapi,psycopg]==1.5.0"]
dev = ["pytest>=8.0", "pytest-mock>=3.12", "pytest-asyncio>=0.23"]

[project.urls]
"Homepage" = "https://github.com/brenordv/pypi-raccoon-tools"
"Source" = "https://github.com/brenordv/pypi-raccoon-tools"
"Bug Tracker" = "https://github.com/brenordv/pypi-raccoon-tools/issues"
"Changelog" = "https://github.com/brenordv/pypi-raccoon-tools/blob/master/raccoontools-db/CHANGELOG.md"
"Author" = "https://raccoon.ninja"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"
