[project]
name = "raccoontools"
version = "3.2.1"
description = "A collection of tools, and helpers that I usually want for a handful of projects, so to avoid rewriting them every time, I decided to create this package."
readme = "README.md"
license = { file = "LICENSE.txt" }
authors = [
    { name = "Breno RdV", email = "hello@raccoon.ninja" },
]
maintainers = [
    { name = "Breno RdV", email = "hello@raccoon.ninja" },
]
keywords = ["retry", "decorator", "benchmark", "logging", "requests", "json", "file operations", "serialization", "http", "utilities", "tools", "helpers", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

requires-python = ">=3.11"

dependencies = [
    "raccoon-simple-stopwatch==0.0.3",
    "simple-log-factory==1.0.0",
    "requests~=2.34.1",
    "pydantic~=2.13.4",
    # Adding this dependency explicitly to solve security issues while requests doesn't catch up. Refs:
    # https://github.com/brenordv/pypi-raccoon-tools/security/dependabot/8
    # https://github.com/brenordv/pypi-raccoon-tools/security/dependabot/9
    "urllib3==2.7.0"
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
]



[project.urls]
"Homepage" = "https://github.com/brenordv/pypi-raccoon-tools"
"Source" = "https://github.com/brenordv/pypi-raccoon-tools"
"Bug Tracker" = "https://github.com/brenordv/pypi-raccoon-tools/issues"
"Changelog" = "https://github.com/brenordv/pypi-raccoon-tools/blob/master/raccoontools/CHANGELOG.md"
"Author" = "https://raccoon.ninja"

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"
